test/parser/reject/unexpected-token-string.ptk
# expected: E1108
"bad toplevel token!"